<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <groupId>com.rushi</groupId>
    <artifactId>s3upload</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>s3upload</name>
    <description>Spring Boot application to upload photos to AWS S3</description>

    <properties>
        <java.version>17</java.version>
    </properties>

    <dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			 <exclusions>
		        <exclusion>
		            <groupId>commons-logging</groupId>
		            <artifactId>commons-logging</artifactId>
		        </exclusion>
		    </exclusions>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/io.awspring.cloud/spring-cloud-aws-starter -->
		<dependency>
		    <groupId>io.awspring.cloud</groupId>
		    <artifactId>spring-cloud-aws-starter</artifactId>
		    <version>3.1.1</version>
		    <exclusions>
		        <exclusion>
		            <groupId>commons-logging</groupId>
		            <artifactId>commons-logging</artifactId>
		        </exclusion>
			</exclusions>
		</dependency>


		<!-- AWS SDK for Java v2 to directly interact with S3 buckets and objects-->
		<dependency>
    	<groupId>software.amazon.awssdk</groupId>
    	<artifactId>s3</artifactId>
    	<version>2.30.2</version>
		    	<exclusions>
				        <exclusion>
				            <groupId>commons-logging</groupId>
				            <artifactId>commons-logging</artifactId>
				        </exclusion>
				</exclusions>
		</dependency>
	
        <!-- Spring Boot Starter for Testing -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
